--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react": "^17.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.0",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "react-spring": "^8.0.27",
+    "react-typical": "^0.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
